# Centipede

./: .gitignore  CMakeLists.txt  README.md
centipede/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
centipede/SFML/: Makefile  SFMLSharedTargets.cmake  cmake_install.cmake
centipede/SFML/src/SFML/: Makefile  cmake_install.cmake
centipede/SFML/src/SFML/Graphics/: Makefile  cmake_install.cmake
centipede/SFML/src/SFML/Network/: Makefile  cmake_install.cmake
centipede/SFML/src/SFML/System/: Makefile  cmake_install.cmake
centipede/SFML/src/SFML/Window/: Makefile  cmake_install.cmake
centipede/code/: Centipede.cpp  ECE_Centipede.cpp  ECE_Centipede.hpp  ECE_LaserBlast.cpp  ECE_LaserBlast.hpp  Spider.cpp  Spider.hpp
centipede/graphics/: player - Copy.pngZone.Identifier
centipede/lab1/: Makefile  cmake_install.cmake
centipede/output/lib/: libsfml-graphics.so.2.6.1  libsfml-network.so.2.6.1  libsfml-system.so.2.6.1  libsfml-window.so.2.6.1
